<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registrarse.FragmentRegistrarse3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:gravity="center">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/escribe_user"
        android:textColor="@color/black"
        android:textSize="16sp" />


        <EditText
            android:id="@+id/fragment_registrarse_editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/nombreusuario"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fragment_registrarse_editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>