<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistarProductoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView_RegistarProductoActivity"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/agregar_imagen"
            android:contentDescription="@string/imgen_descripcion"/>

        <EditText
            android:id="@+id/editTextNombre_RegistarProdutcActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:layout_marginTop="20dp"
            android:hint="Nombre del porducto"/>

        <EditText
            android:id="@+id/editTextPrecio_RegistarProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/precio"/>

        <EditText
            android:id="@+id/editText_Descripcion_RegistarProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/descripci_n"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_Categoria_RegistarProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar producto"
            android:onClick="AgregarProducto"
            android:layout_marginTop="25dp"
            android:layout_gravity="right"/>

    </LinearLayout>
</ScrollView>