<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDetallesProducto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:id="@+id/textViewTitulo_DetallesProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:gravity="center"
            android:textColor="@color/texto_negro"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imagenSlider_imagensProducto_detallesProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:auto_cycle="true"
            app:delay="0"
            app:period="1000"
            app:corner_radius="5"
            app:placeholder="@drawable/producto_imagen"
            app:error_image="@drawable/producto_imagen">
        </com.denzcoskun.imageslider.ImageSlider>


        <TextView
            android:id="@+id/textViewNombreProducto_DetallesProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrecio_DetallesProductoActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/precio"
            android:gravity="center"
            android:textColor="#0000FF"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewDescripcion_DetallesProductiActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descripci_n"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</ScrollView>